--- a/client/package.json
+++ b/client/package.json
@@ -59,6 +59,7 @@
     "@identity.com/sol-did-client": "^0.1.3",
     "@solana/web3.js": "^1.5.0",
     "borsh": "^0.3.1",
+    "browserify-zlib": "^0.2.0",
     "bs58": "^4.0.1",
     "cbor": "^7.0.5",
     "did-jwt": "^5.2.0",
