--- a/client/package.json
+++ b/client/package.json
@@ -58,6 +58,7 @@
   "dependencies": {
     "@identity.com/sol-did-client": "^0.1.3",
     "@solana/web3.js": "^1.10.0",
+    "@types/bn.js": "^5.1.0",
     "borsh": "^0.3.1",
     "browserify-zlib": "^0.2.0",
     "bs58": "^4.0.1",
@@ -65,6 +66,10 @@
     "did-jwt": "^5.2.0",
     "did-resolver": "^3.1.0",
     "ed2curve-esm": "^0.3.0-alpha-1",
-    "ramda": "^0.27.1"
+    "ramda": "^0.27.1",
+    "rxjs": "^7.0.0"
+  },
+  "resolutions": {
+    "@types/bn.js": "5.1.0"
   }
 }
