--- a/client/package.json
+++ b/client/package.json
@@ -33,14 +33,14 @@
   },
   "name": "solarium",
   "author": "Daniel Kelleher <danielbkelleher@gmail.com",
-  "module": "dist/client.esm.js",
+  "module": "dist/solarium.esm.js",
   "size-limit": [
     {
-      "path": "dist/client.cjs.production.min.js",
+      "path": "dist/solarium.cjs.production.min.js",
       "limit": "10 KB"
     },
     {
-      "path": "dist/client.esm.js",
+      "path": "dist/solarium.esm.js",
       "limit": "10 KB"
     }
   ],
