--- a/cli/package.json
+++ b/cli/package.json
@@ -12,6 +12,7 @@
     "@oclif/config": "^1",
     "@oclif/plugin-help": "^3",
     "@solana/web3.js": "^1.10.0",
+    "rxjs": "^7.0.0",
     "solarium": "../client/",
     "tslib": "^1"
   },
@@ -23,13 +24,13 @@
     "@types/node": "^10",
     "chai": "^4",
     "eslint": "^5.13",
-    "eslint-config-oclif": "^3.1",
-    "eslint-config-oclif-typescript": "^0.1",
+    "eslint-config-oclif": "^3.1.0",
+    "eslint-config-oclif-typescript": "^0.2.0",
     "globby": "^10",
     "mocha": "^5",
     "nyc": "^14",
-    "ts-node": "^8",
-    "typescript": "^3.3"
+    "ts-node": "^9.1.1",
+    "typescript": "^4.2.4"
   },
   "engines": {
     "node": ">=14.0.0"
