--- a/client/package.json
+++ b/client/package.json
@@ -46,6 +46,7 @@
   ],
   "devDependencies": {
     "@size-limit/preset-small-lib": "^4.10.2",
+    "@types/bn.js": "^5.1.0",
     "husky": "^6.0.0",
     "jest-when": "^3.3.1",
     "size-limit": "^4.10.2",
@@ -56,14 +57,13 @@
     "typescript": "^4.2.4"
   },
   "dependencies": {
-    "@identity.com/sol-did-client": "^0.1.3",
+    "@identity.com/sol-did-client": "^0.1.5",
     "@solana/web3.js": "^1.10.0",
-    "@types/bn.js": "^5.1.0",
     "borsh": "^0.3.1",
     "browserify-zlib": "^0.2.0",
     "bs58": "^4.0.1",
     "cbor": "^7.0.5",
-    "did-jwt": "^5.2.0",
+    "did-jwt": "github:dankelleher/did-jwt#npm-to-yarn",
     "did-resolver": "^3.1.0",
     "ed2curve-esm": "^0.3.0-alpha-1",
     "ramda": "^0.27.1",
