--- a/client/package.json
+++ b/client/package.json
@@ -1,5 +1,5 @@
 {
-  "version": "0.1.0",
+  "version": "0.0.1",
   "main": "dist/index.js",
   "typings": "dist/index.d.ts",
   "files": [
@@ -7,7 +7,7 @@
     "src"
   ],
   "engines": {
-    "node": ">=10"
+    "node": ">=14"
   },
   "scripts": {
     "start": "tsdx watch",
@@ -31,7 +31,7 @@
     "singleQuote": true,
     "trailingComma": "es5"
   },
-  "name": "solarium",
+  "name": "solarium-js",
   "author": "Daniel Kelleher <danielbkelleher@gmail.com",
   "module": "dist/solarium.esm.js",
   "size-limit": [
@@ -63,7 +63,7 @@
     "browserify-zlib": "^0.2.0",
     "bs58": "^4.0.1",
     "cbor": "^7.0.5",
-    "did-jwt": "github:dankelleher/did-jwt#npm-to-yarn",
+    "did-jwt": "npm:did-jwt-multikey@^5.2.0",
     "did-resolver": "^3.1.0",
     "ed2curve-esm": "^0.3.0-alpha-1",
     "ramda": "^0.27.1",
