--- a/cli/package.json
+++ b/cli/package.json
@@ -1,7 +1,7 @@
 {
   "name": "solarium-cli",
   "description": "CLI for Solarium: The E2E-encrypted messenger on Solana",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "author": "dankelleher @dankelleher",
   "bin": {
     "solarium": "./bin/run"
@@ -13,7 +13,7 @@
     "@oclif/plugin-help": "^3",
     "@solana/web3.js": "^1.10.0",
     "rxjs": "^7.0.0",
-    "solarium-js": "file:../client",
+    "solarium-js": "^0.0.1",
     "tslib": "^1"
   },
   "devDependencies": {
