--- a/ui/package.json
+++ b/ui/package.json
@@ -28,6 +28,7 @@
     "react-dom": "^17.0.2",
     "react-gravatar": "^2.6.3",
     "react-scripts": "4.0.3",
+    "solarium-js": "file:../client/",
     "tailwindcss": "2.x",
     "typescript": "4.x"
   },
