--- a/ui/package.json
+++ b/ui/package.json
@@ -7,6 +7,7 @@
     "@heroicons/react": "^1.0.1",
     "@project-serum/sol-wallet-adapter": "^0.2.0",
     "@solana/web3.js": "^1.10.1",
+    "@tailwindcss/forms": "^0.3.2",
     "@testing-library/jest-dom": "^5.12.0",
     "@testing-library/react": "^11.2.6",
     "@testing-library/user-event": "^13.1.8",
@@ -20,6 +21,7 @@
     "cross-env": "7.x",
     "ipfs-deploy": "^8.0.1",
     "md5": "^2.3.0",
+    "node-inspect-extracted": "^1.0.7",
     "npm-run-all": "4.x",
     "postcss": "8.x",
     "postcss-cli": "8.x",
@@ -28,7 +30,8 @@
     "react-dom": "^17.0.2",
     "react-gravatar": "^2.6.3",
     "react-scripts": "4.0.3",
-    "solarium-js": "file:../client/",
+    "rxjs": "^7.0.1",
+    "solarium-js": "^0.0.4",
     "tailwindcss": "2.x",
     "typescript": "4.x"
   },
@@ -47,16 +50,9 @@
   "eslintConfig": {
     "extends": "react-app"
   },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
-  }
+  "browserslist": [
+    ">0.2%",
+    "not dead",
+    "not op_mini all"
+  ]
 }
