--- a/client/package.json
+++ b/client/package.json
@@ -1,5 +1,5 @@
 {
-  "version": "0.0.4",
+  "version": "0.0.5",
   "main": "dist/index.js",
   "typings": "dist/index.d.ts",
   "files": [
@@ -47,6 +47,8 @@
   "devDependencies": {
     "@size-limit/preset-small-lib": "^4.10.2",
     "@types/bn.js": "^5.1.0",
+    "@types/bs58": "^4.0.1",
+    "@types/ramda": "^0.27.40",
     "husky": "^6.0.0",
     "jest-when": "^3.3.1",
     "size-limit": "^4.10.2",
@@ -57,7 +59,7 @@
     "typescript": "^4.2.4"
   },
   "dependencies": {
-    "@identity.com/sol-did-client": "^0.1.5",
+    "@identity.com/sol-did-client": "^0.1.6",
     "@solana/web3.js": "^1.10.0",
     "borsh": "^0.3.1",
     "browserify-zlib": "^0.2.0",
