--- a/ui/package.json
+++ b/ui/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@headlessui/react": "^1.2.0",
     "@heroicons/react": "^1.0.1",
+    "@identity.com/sol-did-client": "^0.1.7",
     "@project-serum/sol-wallet-adapter": "^0.2.0",
     "@solana/web3.js": "^1.10.1",
     "@tailwindcss/forms": "^0.3.2",
@@ -31,7 +32,7 @@
     "react-gravatar": "^2.6.3",
     "react-scripts": "4.0.3",
     "rxjs": "^7.0.1",
-    "solarium-js": "^0.0.4",
+    "solarium-js": "^0.0.13",
     "tailwindcss": "2.x",
     "typescript": "4.x"
   },
