--- a/client/package.json
+++ b/client/package.json
@@ -17,7 +17,7 @@
     "prepare": "tsdx build",
     "size": "size-limit",
     "analyze": "size-limit --why",
-    "start-validator": "solana-test-validator --bpf-program boxndjnzQZEWbBku3YipL4pchYRc1zi4nNSrFUwawWo ../program/target/deploy/solarium.so  --bpf-program ide3Y2TubNMLLhiG1kDL6to4a8SjxD18YWCYC5BZqNV ../../../Projects/sol-did/program/target/deploy/sol_did.so --reset"
+    "start-validator": "solana-test-validator --bpf-program boxndjnzQZEWbBku3YipL4pchYRc1zi4nNSrFUwawWo ../program/target/deploy/solarium.so  --bpf-program ide3Y2TubNMLLhiG1kDL6to4a8SjxD18YWCYC5BZqNV ../program/tests/fixtures/sol_did.so --reset"
   },
   "peerDependencies": {},
   "husky": {
