--- a/cli/package.json
+++ b/cli/package.json
@@ -1,7 +1,7 @@
 {
   "name": "solarium-cli",
   "description": "CLI for Solarium: The E2E-encrypted messenger on Solana",
-  "version": "0.1.5",
+  "version": "0.1.6",
   "author": "dankelleher @dankelleher",
   "bin": {
     "solarium": "./bin/run"
@@ -12,15 +12,17 @@
     "@oclif/config": "^1.17.0",
     "@oclif/plugin-help": "^3.2.2",
     "@solana/web3.js": "^1.10.0",
+    "debug": "^4.3.1",
     "rxjs": "^7.0.0",
     "rxjs-stream": "^3.2.1",
-    "solarium-js": "^0.1.4",
+    "solarium-js": "^0.1.7",
     "tslib": "^1"
   },
   "devDependencies": {
     "@oclif/dev-cli": "^1.26.0",
     "@oclif/test": "^1",
     "@types/chai": "^4",
+    "@types/debug": "^4.1.5",
     "@types/mocha": "^5",
     "@types/node": "^10",
     "chai": "^4",
