--- a/client/package.json
+++ b/client/package.json
@@ -47,7 +47,6 @@
   "devDependencies": {
     "@size-limit/preset-small-lib": "^4.10.2",
     "@types/bn.js": "^5.1.0",
-    "@types/bs58": "^4.0.1",
     "@types/ramda": "^0.27.40",
     "husky": "^6.0.0",
     "jest-when": "^3.3.1",
@@ -60,18 +59,20 @@
   },
   "dependencies": {
     "@identity.com/sol-did-client": "^0.1.9",
-    "@solana/web3.js": "^1.11.0",
+    "@solana/web3.js": "^1.12.0",
+    "@stablelib/sha256": "^1.0.1",
+    "@stablelib/x25519": "^1.0.1",
+    "@stablelib/xchacha20poly1305": "^1.0.1",
     "borsh": "^0.3.1",
     "browserify-zlib": "^0.2.0",
-    "bs58": "^4.0.1",
     "cbor": "^7.0.5",
     "debug": "^4.3.1",
-    "did-jwt": "npm:did-jwt-multikey@^5.2.0",
     "did-resolver": "^3.1.0",
     "ed2curve-esm": "^0.3.0-alpha-1",
     "ramda": "^0.27.1",
     "rxjs": "^7.0.0",
-    "tweetnacl": "^1.0.3"
+    "tweetnacl": "^1.0.3",
+    "uint8arrays": "^2.1.5"
   },
   "resolutions": {
     "@types/bn.js": "5.1.0"
