--- a/ui/package.json
+++ b/ui/package.json
@@ -34,7 +34,8 @@
     "rxjs": "^7.0.1",
     "solarium-js": "^0.1.13",
     "tailwindcss": "2.x",
-    "typescript": "4.x"
+    "typescript": "4.x",
+    "uint8arrays": "^2.1.5"
   },
   "scripts": {
     "start": "run-p watch:css react-scripts:start",
