--- a/ui/package.json
+++ b/ui/package.json
@@ -12,6 +12,7 @@
     "@testing-library/jest-dom": "^5.12.0",
     "@testing-library/react": "^11.2.6",
     "@testing-library/user-event": "^13.1.8",
+    "@types/javascript-time-ago": "^2.0.2",
     "@types/jest": "^26.0.23",
     "@types/md5": "^2.3.0",
     "@types/node": "^15.0.2",
@@ -21,6 +22,7 @@
     "autoprefixer": "10.x",
     "cross-env": "7.x",
     "ipfs-deploy": "^8.0.1",
+    "javascript-time-ago": "^2.3.6",
     "md5": "^2.3.0",
     "node-inspect-extracted": "^1.0.7",
     "npm-run-all": "4.x",
@@ -32,7 +34,7 @@
     "react-gravatar": "^2.6.3",
     "react-scripts": "4.0.3",
     "rxjs": "^7.0.1",
-    "solarium-js": "^0.1.14",
+    "solarium-js": "^0.1.16",
     "tailwindcss": "2.x",
     "typescript": "4.x",
     "uint8arrays": "^2.1.5"
