fix: wrong setupFilesAfterEnv path.

--- a/client/package.json
+++ b/client/package.json
@@ -80,7 +80,7 @@
   },
   "jest": {
     "setupFilesAfterEnv": [
-      "<rootDir>/src/test/setup.ts"
+      "<rootDir>/test/setup.ts"
     ]
   }
 }
