--- a/ui/package.json
+++ b/ui/package.json
@@ -8,6 +8,7 @@
     "@identity.com/sol-did-client": "^0.1.9",
     "@project-serum/sol-wallet-adapter": "^0.2.0",
     "@solana/web3.js": "^1.10.1",
+    "@tailwindcss/aspect-ratio": "^0.2.1",
     "@tailwindcss/forms": "^0.3.2",
     "@testing-library/jest-dom": "^5.12.0",
     "@testing-library/react": "^11.2.6",
