--- a/cli/.eslintrc
+++ b/cli/.eslintrc
@@ -1,6 +1,6 @@
 {
   "extends": [
-    "oclif",
-    "oclif-typescript"
+    "plugin:@typescript-eslint/recommended",
+    "plugin:prettier/recommended"
   ]
 }
