--- a/cli/package.json
+++ b/cli/package.json
@@ -13,6 +13,7 @@
     "@oclif/plugin-help": "^3.2.2",
     "@solana/web3.js": "^1.10.0",
     "debug": "^4.3.1",
+    "did-resolver": "^3.1.0",
     "rxjs": "^7.0.0",
     "rxjs-stream": "^3.2.1",
     "solarium-js": "^0.1.21",
@@ -25,13 +26,18 @@
     "@types/debug": "^4.1.5",
     "@types/mocha": "^5",
     "@types/node": "^10",
+    "@typescript-eslint/eslint-plugin": "^4.28.2",
+    "@typescript-eslint/parser": "^4.28.2",
     "chai": "^4",
-    "eslint": "^5.13",
+    "eslint": "^7.30.0",
     "eslint-config-oclif": "^3.1.0",
     "eslint-config-oclif-typescript": "^0.2.0",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-prettier": "^3.4.0",
     "globby": "^10",
     "mocha": "^5",
     "nyc": "^14",
+    "prettier": "^2.3.2",
     "ts-node": "^9.1.1",
     "typescript": "^4.2.4"
   },
@@ -67,7 +73,8 @@
     "posttest": "eslint . --ext .ts --config .eslintrc",
     "prepack": "yarn build && oclif-dev manifest",
     "test": "nyc --extension .ts mocha --forbid-only \"test/**/*.test.ts\"",
-    "version": "oclif-dev readme && git add README.md"
+    "version": "oclif-dev readme && git add README.md",
+    "lint": "eslint src/ test/"
   },
   "types": "lib/index.d.ts"
 }
