--- a/cli/package.json
+++ b/cli/package.json
@@ -40,9 +40,9 @@
     "eslint-plugin-prettier": "^3.4.0",
     "globby": "^10",
     "mocha": "^5",
-    "nock": "^13.2.1",
     "nyc": "^14",
     "prettier": "^2.3.2",
+    "sinon": "^12.0.1",
     "ts-node": "^9.1.1",
     "typescript": "^4.2.4"
   },
